@@ -100,9 +100,17 @@ void single_cell_document::parse(xml_lmi::dom_parser const& parser)
         // Do nothing. Ancient lmi files have no "version" attribute,
         // and that's okay. Here, 'file_version' is used only for
         // schema validation, which is performed iff a "data_source"
-        // attribute exists and has a nondefault value--but
-        // "data_source" is a newer attribute than "version", so there
-        // can be no "data_source" without "version".
+        // attribute exists and has a nondefault value--but, because
+        // "data_source" is a newer attribute than "version", there
+        // should be no "data_source" without "version". However, some
+        // old vendor extracts failed to follow that rule, this file
+        //   single_cell_document_01.xsd
+        // has been copied to
+        //   single_cell_document_00.xsd
+        // which is the correct schema for vendor files that have a
+        // "InforceDataSource" element but no "data_source" attribute.
+        // No corresponding '.rnc' schema is needed because validation
+        // uses only '.xsd' schemata.
         }
 
     if(class_version() < file_version)
