@@ -38699,3 +38699,9 @@ Allow a string rms discourages when GNU libtool requires it.
   reg_d_group.xsl
 Fix defect introduced 20050720T1018Z: "substandard standard".
 
+20160318T1511Z <gchicares@sbcglobal.net> [454]
+
+  single_cell_document.cpp
+  single_cell_document_00.xsd [new file]
+Work around a vendor failure.
+
